# backend-revou

./: .env-test  calc.py  pyproject.toml  students.py  supabase.py
app/: __init__.py
app/models/: person.py
app/repositories/: person_repository.py
app/routes/: animal.py  employee.py  persons.py  users.py
app/routes/schema/: update_person.py
app/services/: person_services.py
app/utils/: api_response.py
tests/: conftest.py  test_example.py
tests/controller/: test_get_person.py
