[tool.poetry]
name = "week-14-flask"
version = "0.1.0"
description = ""
authors = ["deathwish99 <44440688+DeathWish99@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg = "^3.1.18"
flask = "^3.0.2"
supabase = "^2.3.4"
flask-sqlalchemy = "^3.1.1"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.26"
psycopg2 = "^2.9.9"
postgres = "^4.0"
pydantic = "^2.6.1"
pytest = "^8.0.1"
pytest-mock = "^3.12.0"
pytest-flask = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
